Upgrade quarkus to 3.15 (#5488)
* Upgrade quarkus to 3 15

* Align operator sdk version with quarkus

* Remove jitpack repository to fix jackson-coreutils

* Add confluent repo

* Refactor datasource to use quarkus properties instead of custom ones

* Disable autocommit at the db connection level and activate the required datasource programatically